# mvis

./: '  .gitignore  ;  Cargo.toml  ]  test
kira/src/: audio_stream.rs  duration.rs
kira/src/arrangement/: clip.rs  id.rs
kira/src/group/: handle.rs
kira/src/instance/: settings.rs
kira/src/manager/: error.rs  mod.rs
kira/src/manager/backend/: instances.rs  sequences.rs
kira/src/metronome/: metronomes.rs
kira/src/mixer/: mod.rs
kira/src/mixer/effect/: filter.rs  handle.rs  mod.rs
kira/src/mixer/track/: handle.rs  mod.rs  sends.rs
kira/src/parameter/: handle.rs  mapping.rs  parameter.rs  parameters.rs
kira/src/playable/: mod.rs
kira/src/sequence/: handle.rs
kira/src/sound/: error.rs  mod.rs
kira/src/static_container/: vec.rs
src/: audio.rs  buffer.rs  clean_tmp_dir.rs  config.rs  consts.rs  display.rs  download_mp3.rs  fft.rs  handlers.rs  main.rs  play.rs  run.rs  stream.rs  temp_dir.rs  update_display.rs
src/kira/: Cargo.toml
src/kira/src/: frame.rs  tempo.rs  util.rs  value.rs
src/kira/src/arrangement/: handle.rs  mod.rs  settings.rs
src/kira/src/command/: mod.rs  producer.rs
src/kira/src/group/: groups.rs  mod.rs  set.rs
src/kira/src/instance/: handle.rs  mod.rs
src/kira/src/manager/: active_ids.rs
src/kira/src/metronome/: handle.rs  mod.rs  settings.rs
src/kira/src/mixer/: effect_slot.rs
src/kira/src/parameter/: tween.rs
src/kira/src/playable/: playables.rs
src/kira/src/sequence/: error.rs  instance.rs  mod.rs
src/kira/src/sound/: handle.rs  id.rs  mod.rs  settings.rs
src/kira/src/static_container/: index_map.rs
(+9 files in other folders)
