[package]
name = "mvis"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
args = "2.2.0"
getopts = "0.2.21"
home = "0.5.3"
kira = "0.5.3"
num-complex = "0.4.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
termion = "1.5.6"
tui = "0.16"
