[package]
name = "mvis"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.65"
args = "2.2.0"
getopts = "0.2.21"
hex = "0.4.3"
home = "0.5.3"
kira = "0.7.0"
num-complex = "0.4.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
termion = "1.5.6"
tui = "0.16"
